day-2 Workflow done

--- a/grayquest/src/Components/UI/molecules/Body/BodyStyle.sass
+++ b/grayquest/src/Components/UI/molecules/Body/BodyStyle.sass
@@ -1,9 +1,16 @@
 .body_div_style
     display: flex
-   
-    justify-content: space-around
-    align-items: start
-    p
-        width: 10%
+    // border: 1px solid red
+    width: 80%
+    justify-content: flex-start
+    align-items: center
+
+    // line-height: 5px
+    h4
+        width: 25%
+        padding: 0px
+        margin: 3px
     p:last-child
-        width: 70%
+        width: 75%
+        padding: 0px
+        margin: 3px
