--- a/grayquest/src/Components/UI/molecules/Header/HeaderStyle.sass
+++ b/grayquest/src/Components/UI/molecules/Header/HeaderStyle.sass
@@ -1,6 +1,8 @@
 .header_div_style
     display: flex
-    justify-content: left
-    align-items: center
-    padding: 0px 15px
+    justify-content: flex-start
+    align-items: flex-start
+    margin: 0px
+    padding: 0px
+    // padding: 0px 15px
     gap: 10px
