--- a/grayquest/src/Components/UI/atoms/H1/H1Style.sass
+++ b/grayquest/src/Components/UI/atoms/H1/H1Style.sass
@@ -3,3 +3,12 @@ $text-color: "red"
 
 .h1_style
     color: red
+    width: 100%
+    margin: 0px
+    margin-bottom: 50px
+    padding: 5px 0px
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px
+    position: sticky
+    top: 0
+    z-index: 100
+    background: white
