--- a/grayquest/src/Components/UI/organisms/UserCard/UserCardStyle.sass
+++ b/grayquest/src/Components/UI/organisms/UserCard/UserCardStyle.sass
@@ -1,9 +1,12 @@
 .user_card_div
     display: flex
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px
     flex-direction: column
-    padding: 10px
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px
+    justify-content: start
+    align-items: flex-start
+    padding: 10px 25px
     border-radius: 10px
+    gap: 10px
 
 .user_card_div:hover
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px
