updated CSS with media queries

--- a/grayquest/src/Components/UI/organisms/AddressCard/AddressCardStyle.sass
+++ b/grayquest/src/Components/UI/organisms/AddressCard/AddressCardStyle.sass
@@ -1,7 +1,7 @@
 .address_card_div
-    
     div
         display: flex
         gap: 5px
+        flex-wrap: wrap
         justify-content: flex-start
         align-items: center
