--- a/grayquest/src/Components/UI/molecules/Body/BodyStyle.sass
+++ b/grayquest/src/Components/UI/molecules/Body/BodyStyle.sass
@@ -1,16 +1,38 @@
+@mixin respond($breakpoint)
+    @if($breakpoint == small)
+        @media (max-width: 420px)
+            @content
+
+    @if($breakpoint == medium)
+        @media (max-width: 768px)
+            @content
+
+    @if($breakpoint == large)
+        @media (max-width: 1024px)
+            @content
+
+    @if($breakpoint == xlarge)
+        @media (min-width: 1200px)
+            @content
+
 .body_div_style
     display: flex
     // border: 1px solid red
-    width: 80%
+    width: 100%
     justify-content: flex-start
     align-items: center
-
     // line-height: 5px
     h4
-        width: 25%
+        width: 20%
         padding: 0px
         margin: 3px
+        @include respond(small)
+            width: 35%
+            
     p:last-child
-        width: 75%
+        width: 80%
         padding: 0px
         margin: 3px
+        @include respond(small)
+            width: 65%
+          
